# doc-categorizer

./: .gitignore  main.py  pyproject.toml
src/: bert_cluster.py  cluster.py  pre_process.py  preprocessor.py  text_extractors.py  tfidf_cluster.py
src/utils/: __init__.py
