[project]
name = "doc-categorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.0.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "pypdf2>=3.0.1",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "setuptools>=75.8.1",
    "wheel>=0.45.1",
]
